fix too wide

--- a/client/src/styles/MealPlanSave.css
+++ b/client/src/styles/MealPlanSave.css
@@ -40,7 +40,7 @@
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   position: relative; /* Added */
-  width: 1400px; /* Adjust the width as needed */
+  width: 100%; /* Adjust the width as needed */
   min-height: 500px;
 }
 .mealplan-popup {
